feat: add endpoint for article search
Issues:
closes #137
